--- a/Statemachine_ST7783_ADC/App/CSharp/LoggerVS08/Logger/Logger/ImageResource.resx
+++ b/Statemachine_ST7783_ADC/App/CSharp/LoggerVS08/Logger/Logger/ImageResource.resx
@@ -169,10 +169,16 @@
   <data name="Remove32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\remove32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Restart32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>Resources\Restart32x32.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Save16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\save16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Temperature16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\Temperature16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Temperature32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\temperature32x32.png;System.Drawing.Bitmap, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
