--- a/WebTemperatureLogger/App/CSharp/LoggerVS13/Logger/Logger/ImageResource.resx
+++ b/WebTemperatureLogger/App/CSharp/LoggerVS13/Logger/Logger/ImageResource.resx
@@ -143,7 +143,7 @@
     <value>resources\fileopen32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="GetFile16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>Resources\Get File.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+    <value>resources\getfile16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Multiply16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>Resources\multiply16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -168,6 +168,9 @@
   </data>
   <data name="RefreshBlue32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\refreshblue32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Remove16x16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>resources\remove16x16.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Remove32x32" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>resources\remove32x32.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
